refactor tests to replace List.of() with Arrays.asList() and update error handling